--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -3260,29 +3260,13 @@
                         <span id="asEndDateDisplay"
                             style="display:none; padding:8px 12px; background:rgba(255,255,255,0.2); border-radius:6px; font-size:11px;">A/S
                             ~</span>
-                        <button class="delete-btn" onclick="deleteCurrentCustomer()">🗑️</button>
-                        <button class="action-btn" onclick="exportCurrentCustomerData()" title="현재 고객 데이터만 JSON으로 저장">💾
+                        <button onclick="exportCurrentCustomerData()"
+                            style="padding: 6px 12px; margin-left: 8px; border: 1px solid #d2d2d7; background: white; border-radius: 6px; font-size: 12px; cursor: pointer; color: #1d1d1f;">💾
                             고객저장</button>
-                        <button class="action-btn" onclick="printCurrentCustomerAll()" title="주요 문서 통합 인쇄">🖨️
+                        <button onclick="printCurrentCustomerAll()"
+                            style="padding: 6px 12px; margin-left: 8px; border: 1px solid #d2d2d7; background: white; border-radius: 6px; font-size: 12px; cursor: pointer; color: #1d1d1f;">🖨️
                             통합인쇄</button>
-                        <style>
-                            .action-btn {
-                                padding: 6px 12px;
-                                margin-left: 8px;
-                                border: 1px solid #d2d2d7;
-                                background: white;
-                                border-radius: 6px;
-                                font-size: 12px;
-                                cursor: pointer;
-                                transition: all 0.2s;
-                                color: #1d1d1f;
-                            }
-
-                            .action-btn:hover {
-                                background: #f5f5f7;
-                                border-color: #86868b;
-                            }
-                        </style>
+                        <button class="delete-btn" onclick="deleteCurrentCustomer()">🗑️</button>
                     </div>
                 </div>
 
