--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -11353,7 +11353,7 @@
          * 노션으로 데이터 내보내기
          * @param {string} type - 'customer', 'schedule', 'checklist'
          */
-        async function exportToNotion(type) {
+        window.exportToNotion = async function(type) {
             console.log('🚀 노션 내보내기 시작 - 타입:', type);
 
             if (!currentCustomer) {
@@ -11485,7 +11485,7 @@
                 btn.innerHTML = originalHTML;
                 btn.disabled = false;
             }
-        }
+        };
 
         // ============================================
         // 통계 탭 관련 함수들
