--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -3321,8 +3321,7 @@
                                 <div class="subtitle">Customer Information</div>
                             </div>
                             <div style="display: flex; gap: 8px;">
-                                <button class="notion-export-btn"
-                                    onclick="alert('버튼 클릭됨!'); exportToNotion('customer');"
+                                <button class="notion-export-btn" onclick="exportToNotion('customer');"
                                     style="background: linear-gradient(135deg, #000 0%, #333 100%); color: white; border: none; padding: 8px 16px; border-radius: 8px; cursor: pointer; font-size: 12px; font-weight: 600; display: flex; align-items: center; gap: 6px;"
                                     title="노션으로 고객 정보 내보내기">
                                     📤 노션으로 내보내기
